v. 0.17.10
- fix when player don't have MSP-30
- advanced fluid handling can be unlock early
- improve evolution reduction feature

v. 0.17.9
- add compatibility with ScienceCostTweak

v. 0.17.8
- bio ins dart ammo cost least wood
- add battery to power pole
- change building-pack recipe to use iron stick
- omnilib now can craft green science 

v. 0.17.7
- hot fix add unlock mixing furnace to optics research

v. 0.17.6
- hot fix can't start when bobextended electronics disable

v. 0.17.5
- add advanced-plastics and plate-pack-1 back
- balanced science recipe to match version 0.17
- balanced robot recipe
- add bob extended electronics
- add bob extended melt ore to slag
- include glass into some recipe
- add modular chest support
- add lead ammo crafting 
- move gem to bob raw material

v. 0.17.4
- lamp now use glass
- add fix for omnilib
- move some code around to match it category
- balance some recipe
- fix crash when already have burner assembly machine

v. 0.17.3
- fix remove ingredient count limit
- fix for some mod combination inserter don't cost burner inserter

v. 0.17.2
- balance some recipes

v. 0.17.1
- add support for Bio Industries
- inserter now cost burner inserter
- mining drill now use burner mining drill

v. 0.17.0
- update to game version 0.17
- drop support for Pyanodons mods

v. 0.16.21
- balanced recipe
- add bobExtended engine
- recipe change (Red Fracture circuit, Logistic package) plate balanced
- (bobExtended) frame machine recipe balance
- buff solar panel can be disable
- add plastic bar and rubber to many recipe
- add advanced-plastics using angel liquid-plastics
- Hot Fix : Electronics assembling can now craft anything

v. 0.16.20
- add compatible for angels industries
- increase pyhigh electronics components stack size
- balanced recipe 
- fix (coke)coal gas recipe not override
- group angel industries into bob logistics
- remove fluid box from angel chem plant if not use 