@@ -72,3 +72,12 @@ momo-electronics-control-d-green=Controller modular Type-C
 
 momo-electronics-junction-red=Electronics Bridge Type-A
 momo-electronics-junction-green=Hyper Bridge Type-Y
+
+# bio
+bio-grade-1=Bio jelly grade 1
+bio-grade-2=Bio jelly grade 2
+bio-grade-3=Bio jelly grade 3
+
+bio-temp=Temperate Flora Paste
+bio-desert=Desert Flora Paste
+bio-swamp=Swamp Flora Paste
