@@ -2,6 +2,7 @@ v. 0.17.10
 - fix when player don't have MSP-30
 - advanced fluid handling can be unlock early
 - improve evolution reduction feature
+- add support for angel bio process
 
 v. 0.17.9
 - add compatibility with ScienceCostTweak
